reports/notebooks/set_theme.err.log
Traceback (most recent call last):
  File "/opt/homebrew/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/opt/homebrew/lib/python3.10/site-packages/nbclient/client.py", line 1265, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/homebrew/lib/python3.10/site-packages/jupyter_core/utils/__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
  File "/opt/homebrew/Cellar/python@3.10/3.10.6_1/Frameworks/Python.framework/Versions/3.10/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/opt/homebrew/lib/python3.10/site-packages/nbclient/client.py", line 703, in async_execute
    await self.async_execute_cell(
  File "/opt/homebrew/lib/python3.10/site-packages/nbclient/client.py", line 1021, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/homebrew/lib/python3.10/site-packages/nbclient/client.py", line 915, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import plotly.io as pio

if 'custom' not in pio.templates:
    transparent = 'rgba(0,0,0,0)'
    bgcolor = '#ff0000'
    black = '#343a42'
    cyan = '#4edcda'
    darkcyan = '#2b9694'
    blue = '#645cff'
    darkblue = '#3a34b5'
    pink = '#f25fe9'
    purple = '#a736a0'
    red = '#f74e4e'
    darkred = '#b33c3c'
    green = '#2d8923'
    darkgreen = '#2d8923'
    orange = '#f7b24e'
    darkorange = '#d8bea1'

    pio.templates['custom'] = pio.templates['plotly']

    pio.templates['custom'].update({
        'data': {
            'bar': [
                {
                    'marker': {
                        'line': {'width': 0},
                    }
                }
            ]
        },
        'layout': {
            'paper_bgcolor': '#fdead4',
            'plot_bgcolor': transparent,
            'font': {'color': black},
            'xaxis': {
                'zerolinecolor': darkorange,
                'gridcolor': darkorange,
                'zerolinewidth': 1,
            },
            'yaxis': {
                'zerolinecolor': darkorange,
                'gridcolor': darkorange,
                'zerolinewidth': 1
            },    
           'colorway': [black, 
                        cyan,     blue,     pink,   red,     green,     orange
                        darkcyan, darkblue, purple, darkred, darkgreen],
            'title': {'x': 0.5},
            'annotationdefaults': {'arrowcolor': black},

        }
    })

    pio.templates.default = 'custom'
------------------

[0;36m  Cell [0;32mIn[1], line 47[0;36m[0m
[0;31m    cyan,     blue,     pink,   red,     green,     orange[0m
[0m                                                    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax. Perhaps you forgot a comma?

SyntaxError: invalid syntax. Perhaps you forgot a comma? (2977157358.py, line 47)

